[gd_scene load_steps=7 format=3 uid="uid://btc5wkxmg1nuk"]

[ext_resource type="Script" uid="uid://ddn05t5her55j" path="res://diescreen.gd" id="1_fptfh"]

[sub_resource type="Animation" id="Animation_mco2j"]
resource_name = "game_over_text"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("RichTextLabel:visible_characters")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.733333, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 0.5, 1.0]
}

[sub_resource type="Animation" id="Animation_fptfh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51lr7"]
_data = {
&"RESET": SubResource("Animation_fptfh"),
&"game_over_text": SubResource("Animation_mco2j")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51lr7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fptfh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
expand_margin_left = 1.0

[node name="DIESCREEN" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fptfh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.565
offset_top = -20.0
offset_right = 127.435
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
scroll_active = false
horizontal_alignment = 1
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 73.0
offset_top = 19.0
offset_right = 83.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_51lr7")
}

[node name="Death Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.39
offset_top = -20.0
offset_right = 197.61
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_styles/panel = SubResource("StyleBoxFlat_51lr7")

[node name="HBoxContainer" type="HBoxContainer" parent="Death Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 105
alignment = 1

[node name="Retry" type="Button" parent="Death Panel/HBoxContainer"]
layout_mode = 2
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_fptfh")
text = "RETRY"

[node name="Quit" type="Button" parent="Death Panel/HBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Death Panel/HBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Death Panel/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
